# HaskellStuff

./: Chapter_3_Types_And_TypeClasses.txt  Chapter_4_Syntax_In_Functions.txt  Chapter_5_Recursion.txt  Chapter_6_Higher_Order_Functions.txt  Chapter_7_Modules.txt  Chapter_8_Custom_Typeclasses.txt  Gotchas.txt  HaskellBackground.txt  HaskellBasics.txt  Miscellanous.txt  README.md
coin-change/: LICENSE  README.md  coin-change.cabal
coin-change/app/: Main.hs
coin-change/src/: CoinChange.hs  Lib.hs
coin-change/test/: CoinChangeSpec.hs
hello-world/: hello-world.cabal  stack.yaml
hello-world/app/: Main.hs
hello-world/src/: Lib.hs  Sorts.hs
