name:                coin-change
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MichaelRechenberg/coin-change#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Rechenberg
maintainer:          michaelrechenberg@oawl.net
copyright:           LOL
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, CoinChange
  build-depends:       base >= 4.7 && < 5
                       , containers == 0.5.7.1
  default-language:    Haskell2010

executable coin-change-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coin-change
  default-language:    Haskell2010

test-suite coin-change-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CoinChangeSpec.hs
  build-depends:       base
                     , coin-change
                     , hspec == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaelRechenberg/coin-change
